fix: change model price

--- a/src/app/pages/price-list/components/benefit-group/benefit-detail/benefit-detail.component.html
+++ b/src/app/pages/price-list/components/benefit-group/benefit-detail/benefit-detail.component.html
@@ -34,7 +34,7 @@
                                     'error' : ''"
             >
               <nz-option *ngFor="let catalog of catalogList"
-                         [nzLabel]="catalog.catalogName" [nzValue]="catalog.id"
+                         [nzLabel]="catalog.catalogName" [nzValue]="catalog.catalogId"
               ></nz-option>
             </nz-select>
 
