--- a/src/app/pages/price-list/components/business-access/business-access-list/business-access-list.component.html
+++ b/src/app/pages/price-list/components/business-access/business-access-list/business-access-list.component.html
@@ -1,17 +1,17 @@
 <div class="title-page">
-  {{'price_list' | translate}}
+  {{'business_empower' | translate}}
 </div>
 
 <div class="header-btn">
-  <ng-container *ngIf="(priceListPage$ | async) as price">
+  <ng-container *ngIf="(businessListPage$ | async) as business">
     <button nz-button class="add-btn primary" (click)="create()">{{ 'add_new' | translate }}</button>
     <button nz-button class="add-btn" (click)="delete()">{{ 'remove' | translate }}</button>
 
     <app-table
-      [rows]="price.rows"
-      [page]="price.page"
-      [pageSize]="price.pageSize"
-      [pageTotal]="price.rowTotal"
+      [rows]="business.rows"
+      [page]="business.page"
+      [pageSize]="business.pageSize"
+      [pageTotal]="business.rowTotal"
       [clientPagination]="false"
       (pageIndexChange)="page$.next($event)"
       (pageSizeChange)="pageSize$.next($event)"
@@ -20,17 +20,7 @@
     >
       <table-column [dataType]="COL_DATA_TYPE.SELECTION" fixColumn="left"></table-column>
       <table-column header="{{ 'no' | translate }}" key="id" [dataType]="COL_DATA_TYPE.INDEX" [width]="'80px'" fixColumn="left"></table-column>
-      <table-column header="{{ 'price_name' | translate }}" key="name"  [width]="'180px'"></table-column>
-      <table-column header="{{ 'price_six_months' | translate }}" key="priceValueSix"  [width]="'180px'">
-        <ng-template appCell let-data>
-          {{data.priceValueSix | currency: 'VND'}}
-        </ng-template>
-      </table-column>
-      <table-column header="{{ 'price_one_year' | translate }}" key="priceValueYear"  [width]="'180px'">
-        <ng-template appCell let-data>
-          {{data.priceValueYear | currency: 'VND'}}
-        </ng-template>
-      </table-column>
+      <table-column header="{{ 'category_name' | translate }}" key="catalogName" [width]="'200px'"></table-column>
       <table-column header="{{ 'status' | translate }}" key="status" [width]="'200px'">
         <ng-template appCell let-data>
           <span class="text-valid" *ngIf="data.status">{{'activated' | translate}}</span>
@@ -52,3 +42,4 @@
     </app-table>
   </ng-container>
 </div>
+
