fix price list and payment student

--- a/src/app/pages/price-list/components/catalog/catalog-detail/catalog-detail.component.html
+++ b/src/app/pages/price-list/components/catalog/catalog-detail/catalog-detail.component.html
@@ -24,7 +24,7 @@
 
         <div nz-col [nzSpan]="8" >
           <div class="text-label">{{ 'status' | translate }}</div>
-          <nz-switch formControlName="status"></nz-switch>
+          <nz-switch formControlName="catalogStatus"></nz-switch>
         </div>
       </div>
     </form>
