--- a/src/app/pages/student/components/taking-care-student/taking-care-student.component.html
+++ b/src/app/pages/student/components/taking-care-student/taking-care-student.component.html
@@ -133,7 +133,7 @@
           </span>
 
           <span class="custom-action" (click)="paymentCheck(data)"
-                nz-tooltip nzTooltipTitle="{{ 'payment_verification' | translate }}">
+                nz-tooltip nzTooltipTitle="{{ 'payment_updates' | translate }}">
             <span nz-icon nzType="wallet" nzTheme="outline"></span>
           </span>
 
