--- a/src/app/pages/staff/components/create-staff/create-staff.component.html
+++ b/src/app/pages/staff/components/create-staff/create-staff.component.html
@@ -21,7 +21,7 @@
               <span class="text-danger">*</span>
             </span>
 
-            <span nzTooltipTitle="Tên của nhân viên nên được viết hoa chữ cái đầu và không nên chứa kí tự đặc biệt hoặc số" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="dollar" nzTheme="outline"></span>
+            <!-- <span nzTooltipTitle="Tên của nhân viên nên được viết hoa chữ cái đầu và không nên chứa kí tự đặc biệt hoặc số" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="dollar" nzTheme="outline"></span> -->
           </div>
           <input nz-input autofocus formControlName="fullName" [nzStatus]="(userForm.get('fullName')?.invalid && (userForm.get('fullName')?.touched || isSubmit)) ? 'error' : ''">
 
