--- a/src/app/pages/website-config/components/page-config/edit-page/edit-page.component.html
+++ b/src/app/pages/website-config/components/page-config/edit-page/edit-page.component.html
@@ -13,68 +13,79 @@
 <div nz-row>
   <div nz-col [nzSpan]="20">
     <form [formGroup]="pageForm">
-      <div nz-row [nzGutter]=[16,16]>
+      <div nz-row [nzGutter]="[16, 16]">
         <div nz-col [nzSpan]="8">
-          <span class="text-label">
-            {{'page_name' | translate}}
-            <span class="text-danger">*</span>
-          </span>
-          <input #pageName nz-input autofocus formControlName="name"
-            [nzStatus]="(pageForm.get('name')?.invalid && (pageForm.get('name')?.touched || isSubmit)) ? 'error' : ''">
-
-          <span class="text-danger"
-            *ngIf="(pageForm.get('name')?.touched || isSubmit)  && pageForm.get('name')?.hasError('required')">
-            {{'page_name' | translate}} {{'cannot_blank' | translate}}
-          </span>
-        </div>
-
-        <div nz-col [nzSpan]="8">
-          <span class="text-label">Slug</span>
-          <input nz-input formControlName="slug"
-            [nzStatus]="(pageForm.get('slug')?.invalid && (pageForm.get('slug')?.touched || isSubmit)) ? 'error' : ''">
-          <span class="text-danger"
-            *ngIf="(pageForm.get('slug')?.touched || isSubmit)  && pageForm.get('slug')?.hasError('pattern')">
-            Slug {{'invalid_format' | translate}}
-          </span>
-        </div>
-
-        <div nz-col [nzSpan]="8">
-          <div class="text-label">
-            {{'page_type' | translate}}
+          <!-- Page Name Input -->
+          <div class="d-flex justify-between align-items-center">
+            <span class="text-label">{{ 'page_name' | translate }}<span class="text-danger">*</span></span>
+            <span nzTooltipTitle="{{ 'guide_page_name' | translate }}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="info-circle" nzTheme="outline"></span>
           </div>
-
+          <input nz-input autofocus formControlName="name" [nzStatus]="(pageForm.get('name')?.invalid && (pageForm.get('name')?.touched || isSubmit)) ? 'error' : ''">
+          <span class="text-danger" *ngIf="(pageForm.get('name')?.touched || isSubmit) && pageForm.get('name')?.hasError('required')">
+            {{ 'page_name' | translate }} {{ 'cannot_blank' | translate }}
+          </span>
+        </div>
+    
+        <div nz-col [nzSpan]="8">
+          <!-- Slug Input -->
+          <ng-template #tooltipPageSlug>
+            Đường dẫn đến trang con của bạn.<br />
+            Thông thường sẽ là tên của trang con viết không dấu, nối liền vởi dấu gạch ngang.<br />
+            <strong>Ví dụ:</strong> trang-chu, gioi-thieu,...
+          </ng-template>
+          <div class="d-flex justify-between align-items-center">
+            <span class="text-label">Slug<span class="text-danger">*</span></span>
+            <span [nzTooltipTitle]="tooltipPageSlug" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="info-circle" nzTheme="outline"></span>
+          </div>
+          <input nz-input formControlName="slug" [nzStatus]="(pageForm.get('slug')?.invalid && (pageForm.get('slug')?.touched || isSubmit)) ? 'error' : ''">
+          <span class="text-danger" *ngIf="(pageForm.get('slug')?.touched || isSubmit) && pageForm.get('slug')?.hasError('pattern')">
+            Slug {{ 'invalid_format' | translate }}
+          </span>
+        </div>
+    
+        <div nz-col [nzSpan]="8">
+          <!-- Page Type Select -->
+          <ng-template #tooltipPageType>
+            Có 2 loại trang là Trang chủ và trang thông thường.<br />
+            Bạn chỉ có thể tạo 1 trang chủ, đây là trang mặc định khi truy cập website của bạn.<br />
+            Bạn có thể tạo nhiều trang thông thường.
+          </ng-template>
+          <div class="d-flex justify-between align-items-center">
+            <span class="text-label">{{ 'page_type' | translate }}<span class="text-danger">*</span></span>
+            <span [nzTooltipTitle]="tooltipPageType" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="info-circle" nzTheme="outline"></span>
+          </div>
           <nz-select formControlName="type">
             <nz-option [nzValue]="1" [nzLabel]="'homepage' | translate"></nz-option>
             <nz-option [nzValue]="2" [nzLabel]="'normal_page' | translate"></nz-option>
           </nz-select>
         </div>
-
-
+    
         <div nz-col [nzSpan]="16">
-          <div class="text-label">
-            {{'description' | translate}}
+          <!-- Description Textarea -->
+          <div class="d-flex justify-between align-items-center">
+            <span class="text-label">{{ 'description' | translate }}<span class="text-danger">*</span></span>
+            <span nzTooltipTitle="{{ 'guide_page_description' | translate }}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="info-circle" nzTheme="outline"></span>
           </div>
-          <textarea nz-input placeholder="{{'enter' | translate }} {{'description' | translate}}" formControlName="description"
-            [nzAutosize]="{ minRows: 3}"></textarea>
+          <textarea nz-input placeholder="{{ 'enter' | translate }} {{ 'description' | translate }}" formControlName="description" [nzAutosize]="{ minRows: 3 }"></textarea>
         </div>
-
+    
         <div nz-col [nzSpan]="24">
-          <span class="text-label">
-            {{'page_content' | translate}}
-          </span>
-          <ckeditor name="ckeditor_text" formControlName="contentHtml"
-            editorUrl="https://cdn.ckeditor.com/4.14.0/full/ckeditor.js" [config]="ckEditorConfig"></ckeditor>
+          <!-- Page Content CKEditor -->
+          <div class="d-flex justify-between align-items-center">
+            <span class="text-label">{{ 'page_content' | translate }}<span class="text-danger">*</span></span>
+            <span nzTooltipTitle="{{ 'guide_page_content' | translate }}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="info-circle" nzTheme="outline"></span>
+          </div>
+          <ckeditor name="ckeditor_text" formControlName="contentHtml" editorUrl="https://cdn.ckeditor.com/4.14.0/full/ckeditor.js" [config]="ckEditorConfig"></ckeditor>
         </div>
-
+    
         <div nz-col [nzSpan]="24">
-          <span class="text-label">
-            {{'seo_tags' | translate}}
-          </span>
-          <ckeditor name="ckeditor_text" formControlName="seoImage"
-            editorUrl="https://cdn.ckeditor.com/4.14.0/full/ckeditor.js" [config]="ckEditorConfig"></ckeditor>
+          <!-- SEO Tags CKEditor -->
+          <span class="text-label">{{ 'seo_tags' | translate }}</span>
+          <ckeditor name="ckeditor_text" formControlName="seoImage" editorUrl="https://cdn.ckeditor.com/4.14.0/full/ckeditor.js" [config]="ckEditorConfig"></ckeditor>
         </div>
       </div>
     </form>
+    
   </div>
 
   <div nz-col [nzSpan]="4">
