update localization for filters at "Nhân sự/Trao quyền", "Lịch sử thanh toán", "Yêu cầu nâng hạng"

--- a/src/app/pages/transaction/transaction-history/transaction-history.component.html
+++ b/src/app/pages/transaction/transaction-history/transaction-history.component.html
@@ -51,7 +51,7 @@
                 <th nzWidth="280px" nzAlign="center">{{ 'referral_bank_agent' | translate }}</th>
                 <th nzWidth="200px" nzAlign="center">{{ 'payment_method' | translate }}</th>
                 <th nzWidth="180px" nzAlign="center">{{ 'payment_status' | translate }}</th>
-                <th nzWidth="200px" nzAlign="center">{{ 'caring_staff' | translate }}</th>
+                <th nzWidth="200px" nzAlign="center">{{ 'caring_by' | translate }}</th>
                 <th nzWidth="180px" nzAlign="center">{{ 'organization' | translate }}</th>
                 <th [nzRight]="true" nzWidth="120px" nzAlign="center">{{ 'actions' | translate }}</th>
             </tr>
