fix wrong class name for tooltip guide

--- a/src/app/pages/organization/components/create-organization/create-organization.component.html
+++ b/src/app/pages/organization/components/create-organization/create-organization.component.html
@@ -15,7 +15,7 @@
     <form [formGroup]="orgForm">
       <div nz-row [nzGutter]=[16,16]>
         <div nz-col [nzSpan]="9">
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               {{'organization_name' | translate }}
               <span class="text-danger">*</span>
@@ -30,7 +30,7 @@
         </div>
 
         <div nz-col [nzSpan]="9" class="text-right">
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               {{ 'status' | translate }}
               <span class="text-danger">*</span>
@@ -42,7 +42,7 @@
         </div>
 
         <div nz-col [nzSpan]="9">
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               Email
               <span class="text-danger">*</span>
@@ -57,7 +57,7 @@
         </div>
 
         <div nz-col [nzSpan]="9">
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               {{'phone_number' | translate }}
               <span class="text-danger">*</span>
@@ -72,7 +72,7 @@
         </div>
 
         <div nz-col [nzSpan]="9">
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               {{'organization_representative' | translate }}
               <span class="text-danger">*</span>
@@ -92,7 +92,7 @@
             - Thủ công: Trưởng phòng sale chủ động chia data cho nhân viên sale của tổ chức<br />
             - Tự động: Hệ thống sẽ tự chia đều data cho các nhân viên sale của tổ chức theo logic xoay vòng (1234512345...).
           </ng-template>
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               {{'data_process_type' | translate}}
               <span class="text-danger">*</span>
@@ -114,7 +114,7 @@
               Đây là tên miền để học viên truy cập vào hệ thống học tập e-learning.<br />
               <strong>Lưu ý:</strong> tên miền không cần điền https://www.
             </ng-template>
-            <div class="d-flex justify-between align-items-center">
+            <div class="d-flex justify-content-between align-items-center">
               <span class="text-label">
                 {{'e_learning_domain' | translate}}
                 <span class="text-danger">*</span>
@@ -129,7 +129,7 @@
               Đây là tên miền để nhân sự của tổ chức truy cập vào quản trị vận hành hệ thống.<br />
               <strong>Lưu ý:</strong> tên miền không cần điền https://www.
             </ng-template>
-            <div class="d-flex justify-between align-items-center">
+            <div class="d-flex justify-content-between align-items-center">
               <span class="text-label">
                 {{'acp_domain' | translate}}
                 <span class="text-danger">*</span>
@@ -146,7 +146,7 @@
         </div>
 
         <div nz-col [nzSpan]="3">
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               Logo
             </span>
@@ -229,7 +229,7 @@
             Đây là tên miền để học viên truy cập vào hệ thống diễn đàn của cộng đồng.<br />
             <strong>Lưu ý:</strong> tên miền không cần điền https://www.
           </ng-template>
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               {{'forum_domain' | translate}}
               <span class="text-danger">*</span>
@@ -245,7 +245,7 @@
             Đây là tên miền để học viên truy cập vào trang chủ của tổ chức, các landingpage và thực hiện chức năng đăng ký khóa học.<br />
             <strong>Lưu ý:</strong> tên miền không cần điền https://www.
           </ng-template>
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               {{'homepage_domain' | translate}}
               <span class="text-danger">*</span>
@@ -263,7 +263,7 @@
         </div>
 
         <div nz-col [nzSpan]="9">
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               {{'address' | translate}}
               <span class="text-danger">*</span>
@@ -275,7 +275,7 @@
         </div>
 
         <div nz-col [nzSpan]="18">
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               {{'embed_map' | translate}}
               <span class="text-danger">*</span>
