--- a/src/app/pages/organization/components/withdraw-config/withdraw-config.component.html
+++ b/src/app/pages/organization/components/withdraw-config/withdraw-config.component.html
@@ -11,7 +11,7 @@
             - Thủ công: Trưởng phòng sale chủ động chia data cho nhân viên sale của tổ chức<br />
             - Tự động: Hệ thống sẽ tự chia đều data cho các nhân viên sale của tổ chức theo logic xoay vòng (1234512345...).
           </ng-template>
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               {{'recurring_withdrawal_period' | translate }}
               <span class="text-danger">*</span>
@@ -30,7 +30,7 @@
             - Nếu bạn chọn rút tiền theo tháng, bạn sẽ điền vào ngày nào bạn muốn thành viên thực hiện lệnh rút tiền. <br />
             - Nếu bạn chọn rút tiền theo tuần, bạn sẽ chọn thứ nào bạn muốn thành viên thực hiện lệnh rút tiền.
           </ng-template>
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               {{'pick_a_day_in_a_week' | translate }}
               <span class="text-danger">*</span>
@@ -60,7 +60,7 @@
         <div nz-col [nzMd]="8"></div>
 
         <div nz-col [nzXs]="24" [nzSm]="12" [nzMd]="8">
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               {{'withdrawal_limit' | translate }}
               <span class="text-danger">*</span>
@@ -83,7 +83,7 @@
             Chỉ áp dụng với hình thức rút tiền theo tháng <br />
             Điền vào đây số % tổng số tiền có trong tài khoản của thành viên mà bạn cho phép rút sớm. Lưu ý: số % phải lớn hơn 0.
           </ng-template>
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               {{'advance_limit' | translate }}
               <span class="text-danger">*</span>
@@ -102,7 +102,7 @@
             Đây là phần ghi chủ mà bạn muốn thông báo cho thành viên. Nội dung này sẽ hiển thị ở phần
             <strong>Số dư tài khoản</strong>
           </ng-template>
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               {{'description' | translate }}
               <span class="text-danger">*</span>
