--- a/src/app/pages/payment/components/payment-method/payment-method-create/payment-method-create.component.html
+++ b/src/app/pages/payment/components/payment-method/payment-method-create/payment-method-create.component.html
@@ -20,7 +20,7 @@
             - <strong>VNPay hoặc các phương pháp khác</strong> là phương pháp thanh toán tự động, tất cả các khâu thanh toán, xác thực và kích hoạt khóa học cũng như hạng thành viên đều hoàn toàn tự động. <br />
             <strong>Lưu ý:</strong> khi thiết lập phần thanh toán này, bạn nên liên hệ với đội ngũ hỗ trợ của chúng tôi. Hotline: 0969218765
           </ng-template>
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               {{'pick_a_method' | translate }}
               <span class="text-danger">*</span>
