--- a/src/app/pages/setting/components/permissions/create-permission/create-permission.component.html
+++ b/src/app/pages/setting/components/permissions/create-permission/create-permission.component.html
@@ -15,7 +15,7 @@
 
     <div nz-col [nzSpan]="20" class="block-content">
       <div nz-col [nzSpan]="6">
-        <div class="d-flex justify-between align-items-center">
+        <div class="d-flex justify-content-between align-items-center">
           <span class="text-label">
             {{'permission_group_name' | translate }}
             <span class="text-danger">*</span>
@@ -38,7 +38,7 @@
       <textarea nz-input [(ngModel)]="description"></textarea>
     </div>
 
-    <div class="d-flex justify-between align-items-center">
+    <div class="d-flex justify-content-between align-items-center">
       <span class="text-label">
         {{'pick_permissions' | translate }}
         <span class="text-danger">*</span>
