--- a/src/app/pages/website-config/components/configs/edit-config/edit-config.component.html
+++ b/src/app/pages/website-config/components/configs/edit-config/edit-config.component.html
@@ -9,7 +9,7 @@
     <form [formGroup]="configForm">
       <div nz-row [nzGutter]=[16,16]>
         <div nz-col [nzSpan]="9">
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               {{'website_name' | translate }}
               <span class="text-danger">*</span>
@@ -24,7 +24,7 @@
         </div>
 
         <div nz-col [nzSpan]="9">
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               {{'copyright_text' | translate }}
               <span class="text-danger">*</span>
@@ -35,7 +35,7 @@
         </div>
 
         <div nz-col [nzSpan]="9">
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               Logo header
               <span class="text-danger">*</span>
@@ -53,7 +53,7 @@
         </div>
 
         <div nz-col [nzSpan]="9">
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               Background header
               <span class="text-danger">*</span>
@@ -69,7 +69,7 @@
         </div>
 
         <div nz-col [nzSpan]="9">
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               Logo footer
               <span class="text-danger">*</span>
@@ -86,7 +86,7 @@
         </div>
 
         <div nz-col [nzSpan]="9">
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               Background footer
               <span class="text-danger">*</span>
@@ -102,7 +102,7 @@
         </div>
 
         <div nz-col [nzSpan]="9">
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               Link facebook
               <span class="text-danger">*</span>
@@ -118,7 +118,7 @@
         </div>
 
         <div nz-col [nzSpan]="9">
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               Link youtube
               <span class="text-danger">*</span>
@@ -134,7 +134,7 @@
         </div>
 
         <div nz-col [nzSpan]="9">
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               Link tiktok
               <span class="text-danger">*</span>
@@ -150,7 +150,7 @@
         </div>
 
         <div nz-col [nzSpan]="9">
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               Link zalo
               <span class="text-danger">*</span>
@@ -166,7 +166,7 @@
         </div>
 
         <div nz-col [nzSpan]="18">
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               {{'description' | translate}}
               <span class="text-danger">*</span>
