--- a/src/app/pages/website-config/components/header-config/edit-header/edit-header.component.html
+++ b/src/app/pages/website-config/components/header-config/edit-header/edit-header.component.html
@@ -15,7 +15,7 @@
     <form [formGroup]="headerForm">
       <div nz-row [nzGutter]=[16,16]>
         <div nz-col [nzSpan]="8">
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               {{'display_name' | translate}}
               <span class="text-danger">*</span>
@@ -30,7 +30,7 @@
         </div>
 
         <div nz-col [nzSpan]="8">
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               {{'position' | translate}}
               <span class="text-danger">*</span>
@@ -41,7 +41,7 @@
         </div>
 
         <div nz-col [nzSpan]="8">
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               {{'status' | translate}}
               <span class="text-danger">*</span>
@@ -57,7 +57,7 @@
             - Nếu chọn trang bên trong hệ thống: bạn sẽ chọn một trong những trang mà bạn đã tạo ở phần thiết lập các trang con.<br />
             - Nếu chọn trang bên ngoài hệ thống: bạn sẽ copy đường link của trang bên ngoài mà bạn muốn gán vào nút bấm này
           </ng-template>
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               {{'page_url' | translate}}
               <span class="text-danger">*</span>
@@ -83,7 +83,7 @@
         </div>
 
         <div nz-col [nzSpan]="5">
-          <div class="d-flex justify-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               {{'parent_link' | translate}}
             </span>
