--- a/src/app/pages/setting/components/permissions/create-permission/create-permission.component.html
+++ b/src/app/pages/setting/components/permissions/create-permission/create-permission.component.html
@@ -38,8 +38,8 @@
       <textarea nz-input [(ngModel)]="description"></textarea>
     </div>
 
-    <div class="d-flex justify-content-between align-items-center">
-      <span class="text-label">
+    <div class="d-flex align-items-center">
+      <span class="text-label" style="margin-right:.5rem">
         {{'pick_permissions' | translate }}
         <span class="text-danger">*</span>
       </span>
