--- a/src/app/pages/website-config/components/configs/edit-config/edit-config.component.html
+++ b/src/app/pages/website-config/components/configs/edit-config/edit-config.component.html
@@ -52,8 +52,8 @@
         </div>
 
         <div nz-col [nzSpan]="9">
-          <div class="d-flex justify-content-between align-items-center">
-            <span class="text-label">
+          <div class="d-flex align-items-center">
+            <span class="text-label" style="margin-right:.5rem">
               Background header
               <span class="text-danger">*</span>
             </span>
@@ -85,8 +85,8 @@
         </div>
 
         <div nz-col [nzSpan]="9">
-          <div class="d-flex justify-content-between align-items-center">
-            <span class="text-label">
+          <div class="d-flex align-items-center">
+            <span class="text-label" style="margin-right:.5rem">
               Background footer
               <span class="text-danger">*</span>
             </span>
